# rust-traits-mastery

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/p01_derive_basics/: Cargo.toml
crates/p01_derive_basics/src/: lib.rs
crates/p02_comparison_traits/: Cargo.toml
crates/p02_comparison_traits/src/: lib.rs
crates/p03_conversion_from_into/: Cargo.toml
crates/p03_conversion_from_into/src/: lib.rs
crates/p04_conversion_try/: Cargo.toml
crates/p04_conversion_try/src/: lib.rs
crates/p05_conversion_asref/: Cargo.toml
crates/p05_conversion_asref/src/: lib.rs
crates/p06_deref_magic/: Cargo.toml
crates/p06_deref_magic/src/: lib.rs
crates/p07_drop_destructor/: Cargo.toml
crates/p07_drop_destructor/src/: lib.rs
crates/p08_borrow_toowned/: Cargo.toml
crates/p08_borrow_toowned/src/: lib.rs
crates/p09_iterator_core/: Cargo.toml
crates/p09_iterator_core/src/: lib.rs
crates/p10_iterator_collect/: Cargo.toml
crates/p10_iterator_collect/src/: lib.rs
crates/p11_iterator_advanced/: Cargo.toml
crates/p11_iterator_advanced/src/: lib.rs
crates/p12_closure_fn/: Cargo.toml
crates/p13_closure_fnmut_fnonce/: Cargo.toml
crates/p14_operator_arithmetic/: Cargo.toml
crates/p15_operator_index/: Cargo.toml
crates/p16_operator_bitwise/: Cargo.toml
crates/p17_display_debug/: Cargo.toml
crates/p18_error_handling/: Cargo.toml
crates/p19_io_read_write/: Cargo.toml
crates/p20_io_bufread_seek/: Cargo.toml
crates/p21_send_sync/: Cargo.toml
crates/p22_sized_any/: Cargo.toml
crates/p23_extend_sum/: Cargo.toml
crates/p24_capstone/: Cargo.toml
(+12 files in other folders)
